# ms-mint-app2

./: .gitignore  .mailmap  404.html  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  constraints.txt  docker-compose-test.yml  docker-compose.yml  environment.yml  index.html  mkdocs.yml  notes.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  sitemap.xml  test_metadata_handling.py  test_mz_width_default.py  test_rt_derivation.py
.github/workflows/: build-executables-all-platforms.yml  deploy-docs.yml  docker-image.yml  publish-to-pypi.yml  pythonpackage.yml  pythonpublish.yml  run-tests.yml
analysis/: 251202-MINT__test_MINT_old__results_peak_area_top3.xlsx  analysis.ipynb  app_dash_merged_traces.py  app_dash_separate_traces.py  app_dash_separate_traces_with_resampler.py  volcano_click_distribution.py
analysis/DuckDB_profiling/: README.md  compare_results.py  run_profiling.py  run_profiling_chunked.py  run_profiling_pruned.py  run_profiling_slice.py  run_profiling_with_dump.py
assets/: targets.css
developer-notes/: index.html
docs/: developer-notes.md  gui.md  index.md  install.md  quickstart.md
docs/gui/: analysis.md  index.md  ms-files.md  optimization.md  processing.md  quality-control.md  targets.md  workspaces.md
examples/: README.md  clustergrammer2_dash_app.py  clustergrammer_dash_app.py  mock_compound_sample_matrix.csv
gui/: index.html
gui/analysis/: index.html
gui/ms-files/: index.html
gui/optimization/: index.html
gui/processing/: index.html
gui/targets/: index.html
gui/workspaces/: index.html
install/: index.html
pyinstaller/: BUILD_GUIDE.md  CROSS_PLATFORM_CACHE_GUIDE.md  Mint.spec  create_asari_env.py  prebuild_matplotlib_cache.py
pyinstaller/hooks/: hook-distinctipy.py  hook-feffery_antd_components.py  hook-feffery_utils_components.py  hook-ms_mint_app.py  hook-numpy.py  rthook_openms.py
pyinstaller/prebuild_matplotlib_cache/matplotlib/: fontlist-v390.json
quickstart/: index.html
src/ms_mint_app/: __init__.py  _version.py  app.py  colors.py  duckdb_manager.py  instance.py  logging_setup.py  pca.py  peak_fitting.py  plugin_manager.py  prebuild_cache.py  rt_span_optimizer.py  sample_metadata.py  tools.py
src/ms_mint_app/assets/: server_offline_notice.css  server_offline_notice.js  styles.css  targets.css
src/ms_mint_app/assets/explore_bundle/: chromatograms.parquet  manifest.json  results.parquet  samples.parquet  targets.parquet
src/ms_mint_app/plugins/: analysis.py  bar_layout.py  download_utils.py  explorer.py  metadata.py  ms2_browser.py  ms_files.py  processing.py  quality_control.py  scalir.py  scalir_utils.py  target_optimization.py  targets.py  targets_asari.py  utils.py  workspaces.py
src/ms_mint_app/plugins/analysis/: __init__.py  _shared.py  bar.py  clustermap.py  implementation_plan.md.resolved  pca.py  plugin.py  qc.py  tsne.py  violin.py  walkthrough.md.resolved
src/ms_mint_app/plugins/analysis_tools/: distributions.py  heatmap.py  hierachical_clustering.py  pca.py  plotting.py  trace_helper.py
src/ms_mint_app/scripts/: Mint.py
src/ms_mint_app/tests/: test_envelope_query.py
stylesheets/: extra.css
tests/: compare_pca_implementations.py  test_analysis_callbacks.py  test_analysis_helpers.py  test_analysis_pca.py  test_analysis_plugin.py  test_app_layout.py  test_app_utils.py  test_auth_database.py  test_bookmark_modal.py  test_colors.py  test_duckdb_manager_batches.py  test_duckdb_manager_utils.py  test_error_messages.py  test_explorer_plugin.py  test_file_formats.py  test_filelock.py  test_import_database.py  test_instance.py  test_logging_setup.py  test_metadata_handling.py  test_mint_script_helpers.py  test_mint_script_main.py  test_ms_files_plugin.py  test_mz_width_default.py  test_mzml_lxml_parser.py  test_mzml_writer.py  test_optimization_error_notifications.py  test_optimization_plugin.py  test_parsers.py  test_peak_fitting.py  test_plugin_manager.py  test_prebuild_cache.py  test_processing_helpers.py  test_processing_helpers_extended.py  test_processing_plugin.py  test_processing_results_actions.py  test_processing_scalir_ui.py  test_rt_alignment_state_authority.py  test_rt_derivation.py  test_rt_span_optimizer.py  (+12 more)
tests/test_MS1/metadata/: metadata.csv  metadata_template.csv
tests/test_MS1/targets/: targets.csv  targets_template.csv
