[build-system]
requires = ["setuptools<80", "wheel", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "ms-mint-app"
description = "Metabolomics Integrator Interactive Web-Application (Mint)"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
  {name = "Soren Wacker", email = "swacker@ucalgary.ca"}
]
maintainers = [
  {name = "Soren Wacker", email = "swacker@ucalgary.ca"}
]
keywords = ["metabolomics", "integrator", "mint"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]
dependencies = [
  #  "ms-mint",
  #  "ms-mint @ git+https://github.com/Valdes-Tresanco-MS/ms-mint.git",
  "xlsxwriter",
  "pandas==2.3.2",
  "numpy==2.3.3",
  "plotly==6.3.1",
  "psutil==7.1.0",
  "polars==1.33.1",
  "waitress",
  "dash",
  "dash[diskcache]",
  "dash_extensions",
  "flask_login",
  "flask_migrate",
  "flask_wtf",
  "werkzeug==3.0.6",
  "feffery-antd-components==0.4.2",
  "feffery-utils-components==0.3.3",
  "duckdb==1.4.1",
  "distinctipy==1.3.4",
  "tqdm>=4.67.1",
  "fastcluster",
  "pyinstaller==6.17.0",
  "setuptools==79.0.1",
  "pyarrow>=22.0.0",
  "lxml>=6.0.2",
  "scipy>=1.16.3",
  "scikit-learn>=1.8.0",
  "matplotlib>=3.10.8",
  "mkdocs",
  "mkdocs-material",
  "mkdocs-glightbox",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/LewisResearchGroup/ms-mint-app"
Documentation = "https://lewisresearchgroup.github.io/ms-mint-app/"
Repository = "https://github.com/LewisResearchGroup/ms-mint-app.git"
"Bug Tracker" = "https://github.com/LewisResearchGroup/ms-mint-app/issues"

[project.scripts]
Mint = "ms_mint_app.scripts.Mint:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ms_mint_app*"]

[tool.setuptools.package-data]
"ms_mint_app.assets" = ["*.css"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/ms_mint_app/_version.py"
tag_prefix = "v"
parentdir_prefix = ""

[tool.setuptools.dynamic]
version = { attr = "ms_mint_app.__version__" }
